...
    <string name="try_again">Try again</string>
    <string name="version">Version %1$s %2$s (%3$s)</string>
    <string name="date_of_build">Date of build %s</string>
    <string name="type_of_declension">Type of declension</string>
    <string name="masculine">Masculine</string>
    <string name="neuter">Neuter</string>
    <string name="feminine">Feminine</string>
    <string name="handbook">Handbook</string>
    <string name="about">About</string>
    <string name="other_nouns">Other nouns:</string>
    <string name="rate_app">Rate application</string>
    <string name="rate_app_unavailable">No app store found</string>
    <string name="word_filter">Word filter by gender</string>
...

    <!-- Quit quiz overlay -->
    <string name="quit_quiz_title">Keep going! 💪</string>
    <string name="quit_quiz_message">You\'re making great progress today. Are you sure you want to leave?</string>
    <string name="quit_quiz_words_label">words studied</string>
    <string name="quit_quiz_exercises_label">exercises done</string>
    <string name="quit_quiz_keep_going">Keep going</string>
    <string name="quit_quiz_leave">Leave quiz</string>
    <string name="quit_quiz_recent_words_label">RECENTLY STUDIED</string>
    <string name="quit_quiz_points_label">points</string>
    <string name="quit_quiz_daily_goal_progress">Today\'s goal: %1$d / %2$d points</string>
    <string name="quit_quiz_daily_goal_one_away">Just a few more points to hit today\'s goal! 🎯</string>
    <string name="quit_quiz_daily_goal_reached">Today\'s goal reached! 🎉</string>
...
    <string name="test_notification" translatable="false">Test notification</string>
    <string name="test_notification_sent" translatable="false">Test notification sent</string>
    <string name="declension_pattern">like \"%s\"</string>

    <string name="quiz_mode_title">Choose quiz mode</string>
    <string name="hub_title">Czech Declension Quiz</string>
    <string name="quiz_mode_full_table">Full declension table quiz</string>
    <string name="quiz_mode_one_case">One case at a time quiz</string>


    <array name="caseName">
        <item>Nominativ</item>
        <item>Genitiv</item>
...
